# supercell

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pr_build.yml  release.yml
src/: main.rs  progress.rs  runner.rs  structs.rs
src/runner/: chart.rs  helpers.rs  math.rs  request.rs  run_fns.rs
src/setup/: json_helpers.rs  mod.rs
