[package]
name = "supercell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.2.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
color-eyre = "0.6.2"
indicatif = "0.17.3"
rand = "0.8.5"
console = "0.15.5"
comfy-table = "6.1.4"
